2015-07-25  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-1.
	* NAMESPACE: import from "base" packages

2014-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.2-0, as we are not 100% back compatible
	with this:

	* R/norMix.R (norMix): allow new 'sigma' and prefer it to 'sig2',
	After suggestions from Doug Martin (UW Seattle).
	(`[.norMix`): new method which allows 'x[, "sig2"]' to continue working.

2013-04-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-4, released to CRAN

	* R/norMixEM.R (norMixMLE): finally providing MLE in addition to ME.

2013-01-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/norMixEM.R (norMixEM): finally add Fritz Leisch's EM estimation
	routine; with 'trace' and other tweaks.

2011-04-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-3, CRAN-released 2011-04-14

2010-03-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/norMix.R (qnorMix, f.make): fix for traceRootsearch >= 3

2010-03-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/norMix.R (norMix): when #{components} =: m  >= 10, abbreviate
	in name construction
	(qnorMix): if m >= 100 (Christoph has m = 5000 !), the default
	method now is "root2".
	(qnorMix (n.mu.interp): at most about n.mu.interp (~= 100) mu's are
	used for inverse interpolation, using
	(sub_seq): new auxiliary function {should belong to 'sfsmisc'}.

2009-12-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/safeUroot.R (safeUroot): new: "export" from qnorMix()
	* R/norMix.R: ditto

2009-11-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-1, CRAN-released 2009-11-26

	* R/norMix.R (qnorMix): default method = "interpQspline", log.p=TRUE:
		need to use qlogis(*, log.p) as well.

	* R/norMix.R (par2norMix): better default 'name' construction

2008-09-17  Martin Maechler  <maechler@stat.math.ethz.ch>
